<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:id="@+id/suspension_window_layout"
    android:layout_height="wrap_content">

    <ImageView
        style="@style/imageview1_style_main"
        android:layout_marginTop="4.7dp"
        android:src="@mipmap/main_message_bg" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="14.7dp"
        android:layout_marginRight="29.5dp">

        <TextView
            android:id="@+id/main_message_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/activity_title"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/main_message_content_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_message_title_tv"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/imageview1_style_main"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/main_message_gif" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="9dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_rewards"
                    android:textColor="#e14e27"
                    android:textSize="15.3sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="88.3dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:ellipsize="end"
                    android:maxLines="2"

                    android:text="@string/activity_description"
                    android:textColor="#7f460b"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3.3dp"
                    android:text="@string/cost_money"
                    android:textColor="#7f460b"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/main_message_look_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_message_content_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:background="@drawable/main_white_green_bg3_shape"
            android:paddingBottom="9dp"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:paddingTop="9dp"
            android:text="@string/go"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

</FrameLayout>

